--- a/about.html
+++ b/about.html
@@ -920,9 +920,11 @@ const newStyles = `
         <div class="nav-container">
             <a href="index.html" class="logo">Siphosenkosi Mlotshwa</a>
             <button class="mobile-menu-btn">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M3 12h18M3 6h18M3 18h18"/>
-                </svg>
+                <div class="hamburger">
+                    <span class="line"></span>
+                    <span class="line"></span>
+                    <span class="line"></span>
+                </div>
             </button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
