--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -227,21 +227,47 @@
     }
 
     .hamburger {
-        width: 30px;
-        height: 20px;
-        position: relative;
-        transition: 0.5s ease-in-out;
-    }
+    width: 30px;
+    height: 20px;
+    position: relative;
+    transition: all 0.3s ease-in-out;
+}
 
-    .hamburger .line {
-        display: block;
-        background: white;
-        width: 100%;
-        height: 2px;
-        position: absolute;
-        transition: 0.5s ease-in-out;
-        color: white;
-    }
+.hamburger .line {
+    display: block;
+    background: white;
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    left: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.hamburger .line:nth-child(1) {
+    top: 0;
+}
+
+.hamburger .line:nth-child(2) {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.hamburger .line:nth-child(3) {
+    bottom: 0;
+}
+
+/* Animation classes */
+.mobile-menu-btn.active .hamburger .line:nth-child(1) {
+    transform: translateY(9px) rotate(45deg);
+}
+
+.mobile-menu-btn.active .hamburger .line:nth-child(2) {
+    opacity: 0;
+}
+
+.mobile-menu-btn.active .hamburger .line:nth-child(3) {
+    transform: translateY(-9px) rotate(-45deg);
+}
 
             .logo {
                 position: fixed;
@@ -304,9 +330,11 @@
         <div class="nav-container">
             <a href="index.html" class="logo">Siphosenkosi Mlotshwa</a>
             <button class="mobile-menu-btn">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M3 12h18M3 6h18M3 18h18"/>
-                </svg>
+                <div class="hamburger">
+                    <span class="line"></span>
+                    <span class="line"></span>
+                    <span class="line"></span>
+                </div>
             </button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
