updated social media links hover color

--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -176,7 +176,7 @@
         }
 
         .social-links a:hover {
-            color: red;
+            color: greenyellow;
         }
 
         /* Mobile Styles */
