--- a/blog.html
+++ b/blog.html
@@ -494,7 +494,7 @@
         }
 
         .social-links a:hover {
-            color: red;
+            color: greenyellow;
         }
 
         /* Styles for resume and certification modals */
