--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
         }
 
         .social-links a:hover {
-            color: red;
+            color: greenyellow;
         }
 
         /* Styles for resume and certification modals */
@@ -1088,16 +1088,7 @@ const newStyles = `
         <div class="container">
             <h6 class="section-title">FRONTEND WEB DESIGN</h6>
             <div class="grid grid-2">
-                <!-- VR Experience Platform Card -->
-                <div class="card">
-                    <a href="https://vrtravelevents.netlify.app" target="_blank" class="card-link">
-                        <img src="images/Vintage 3D Cinema Audience.jpeg" alt="Project 2">
-                        <div class="card-content">
-                            <h3>VR Experience Platform</h3>
-                            <p>Discover a new way to explore the world with this cutting-edge virtual reality platform that brings global destinations and live events right to your fingertips.</p>
-                        </div>
-                    </a>
-                </div>
+                
             
                 <!-- Indie Book Shop Card -->
                 <div class="card">
@@ -1131,6 +1122,18 @@ const newStyles = `
                         </div>
                     </a>
                 </div>
+
+                <!-- VR Experience Platform Card -->
+                <div class="card">
+                    <a href="https://vrtravelevents.netlify.app" target="_blank" class="card-link">
+                        <img src="images/Vintage 3D Cinema Audience.jpeg" alt="Project 2">
+                        <div class="card-content">
+                            <h3>VR Experience Platform</h3>
+                            <p>Discover a new way to explore the world with this cutting-edge virtual reality platform that brings global destinations and live events right to your fingertips.</p>
+                        </div>
+                    </a>
+                </div>
+
             </div>
         </div>
     </section>
