--- a/shop.html
+++ b/shop.html
@@ -689,7 +689,7 @@
         }
 
         .social-links a:hover {
-            color: red;
+            color: greenyellow;
         }
 
         /* Styles for resume and certification modals */
