--- a/about.html
+++ b/about.html
@@ -496,7 +496,7 @@
         }
 
         .social-links a:hover {
-            color: red;
+            color: greenyellow;
         }
 
         /* Styles for resume and certification modals */
