--- a/creating-the-oasis.html
+++ b/creating-the-oasis.html
@@ -176,7 +176,7 @@
         }
 
         .social-links a:hover {
-            color: red;
+            color: greenyellow;
         }
 
         /* Mobile Styles */
