--- a/myth-of-meaning.html
+++ b/myth-of-meaning.html
@@ -176,7 +176,7 @@
         }
 
         .social-links a:hover {
-            color: red;
+            color: greenyellow;
         }
 
         /* Mobile Styles */
