--- a/parker-probe.html
+++ b/parker-probe.html
@@ -177,7 +177,7 @@
         }
 
         .social-links a:hover {
-            color: red;
+            color: greenyellow;
         }
 
         /* Mobile Styles */
