--- a/the-golden-record.html
+++ b/the-golden-record.html
@@ -176,7 +176,7 @@
         }
 
         .social-links a:hover {
-            color: red;
+            color: greenyellow;
         }
 
         /* Mobile Styles */
