--- a/the-real-reason-introverts-dont-fit-in.html
+++ b/the-real-reason-introverts-dont-fit-in.html
@@ -176,7 +176,7 @@
         }
 
         .social-links a:hover {
-            color: red;
+            color: greenyellow;
         }
 
         /* Mobile Styles */
