updated cert modal content

--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
             display: inline-flex;
             align-items: center;
             padding: 0.75rem 1.5rem;
-            border-radius: 9999px;
+            border-radius: 0px;
             text-decoration: none;
             transition: all 0.3s ease;
             font-weight: 500;
@@ -192,7 +192,7 @@
         }
 
         .btn-outline:hover {
-            background: rgba(79, 70, 229, 0.1);
+            background: white;
             transform: translateY(-2px);
         }
 
@@ -456,9 +456,9 @@
         .profile-img {
     display: block;
     margin: 0 auto 1.5rem; /* Centers the image */
-    width: 180px; /* Sets a fixed size */
+    width: 198px; /* Sets a fixed size */
     height: 180px;
-    border-radius: 50%; /* Makes the image circular */
+    border-radius: 0%; /* Makes the image circular */
     object-fit: cover; /* Ensures the image fills the circle */
     border: 2px solid black; /* Optional: Add a border */
 }
@@ -510,17 +510,20 @@
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 1001;
             overflow-y: auto;
+            color: white;
         }
 
         .doc-modal-content {
             position: relative;
             background-color: white;
+            color: black;
             margin: 5% auto;
             padding: 2rem;
             width: 90%;
             max-width: 800px;
             border-radius: 1rem;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            align-items: center;
         }
 
         .cert-grid {
@@ -540,6 +543,7 @@
 
         .cert-card:hover {
             transform: translateY(-5px);
+            
         }
 
         .cert-card img {
@@ -552,6 +556,7 @@
 
         .cert-card h3 {
             margin: 1rem 0;
+            color: white;
         }
 
         .cert-card p {
@@ -959,7 +964,7 @@ const newStyles = `
                         <button class="btn btn-outline" onclick="openCertModal()">View Certifications</button>
                     </div>
                 </div> 
-            </div>,
+            </div>
         </div>
     </section>
 
