made profile image in about me circular

--- a/about.html
+++ b/about.html
@@ -458,7 +458,7 @@
     margin: 0 auto 1.5rem; /* Centers the image */
     width: 198px; /* Sets a fixed size */
     height: 180px;
-    border-radius: 0%; /* Makes the image circular */
+    border-radius: 250%; /* Makes the image circular */
     object-fit: cover; /* Ensures the image fills the circle */
     border: 2px solid black; /* Optional: Add a border */
 }
@@ -960,8 +960,8 @@ const newStyles = `
                         
                         Beyond his technical expertise, Siphosenkosi actively shares insights through his personal blog, covering topics like space, exploration, AI, and philosophy.</p>
                     <div class="btn-group">
-                        <button class="btn btn-primary" onclick="openResumeModal()">View Resume</button>
-                        <button class="btn btn-outline" onclick="openCertModal()">View Certifications</button>
+                        <button class="btn btn-primary" onclick="openResumeModal()">VIEW RESUME</button>
+                        <button class="btn btn-outline" onclick="openCertModal()">VIEW CERTIFICATIONS</button>
                     </div>
                 </div> 
             </div>
