--- a/creating-the-oasis.html
+++ b/creating-the-oasis.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="images/ico_logo.ico">
     <!-- Keep all your existing head content (fonts, styles, etc.) -->
      
     <!-- Font Awesome -->
