--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- EmailJS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -37,6 +38,23 @@
             color: white;
             background-color: black;
         }
+
+        .logo {
+    font-family: 'Caveat', cursive;
+    font-size: 2.5rem;
+    font-weight: 900;
+    color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.logo img {
+    width: 60px;
+    height: 60px
+    object-fit: cover;
+}
 
         /* Grid background */
         .grid-background {
@@ -75,8 +93,7 @@
         }
 
         .logo {
-            font-size: 1.5rem;
-            font-weight: 700;
+            
             background: linear-gradient(135deg, black, black);
             -webkit-background-clip: text;
             color: white;
@@ -924,7 +941,10 @@ const newStyles = `
     <!-- Same navbar as index.html -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">Siphosenkosi Mlotshwa</a>
+            <a href="index.html" class="logo">
+                <img src="images/VR_LOGO_1-removebg-preview.png" alt="Logo">
+                Siphosenkosi Mlotshwa
+            </a>
             <button class="mobile-menu-btn">
                 <div class="hamburger">
                     <span class="line"></span>
