--- a/creating-the-oasis.html
+++ b/creating-the-oasis.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- EmailJS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -30,6 +31,23 @@
             margin: 0 auto;
             padding: 2rem;
         }
+
+        .logo {
+    font-family: 'Caveat', cursive;
+    font-size: 2.5rem;
+    font-weight: 900;
+    color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.logo img {
+    width: 60px;
+    height: 60px
+    object-fit: cover;
+}
 
         .article-header {
             text-align: center;
@@ -101,8 +119,7 @@
         }
 
         .logo {
-            font-size: 1.5rem;
-            font-weight: 700;
+            
             background: linear-gradient(135deg, black, black);
             -webkit-background-clip: text;
             color: white;
@@ -326,7 +343,10 @@
     <!-- Same navbar as index.html -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">Siphosenkosi Mlotshwa</a>
+            <a href="index.html" class="logo">
+                <img src="images/VR_LOGO_1-removebg-preview.png" alt="Logo">
+                Siphosenkosi Mlotshwa
+            </a>
             <button class="mobile-menu-btn">
                 <div class="hamburger">
                     <span class="line"></span>
