--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@ const newStyles = `
         <div class="hero-content">
             <p></p> 
             <img src="images/VR_LOGO_1-removebg-preview.png" alt="Profile Image" class="hero-image">
-            <h3>They say dreams are as real for as long as they last, couldn't we say the same thing about life? </h3>
+            <h3>They say dreams are real only as long as they last. Couldn't we say the same thing about life? This is the most exciting time we could have possibly hoped to be alive. So whatever you do don't be bored. Exercise your human mind as fully as possible, knowing it is only an exercise. Build beautiful artifacts, solve problems, explore the secrets of the physical universe, savor the input from all the senses, feel the joy and sorrow, the laughter, the empathy, compassion and tote the emotional memory in your travel bag. </h3>
             
         </div>
     </section>
