implemented t-shirt grid layout

--- a/shop.html
+++ b/shop.html
@@ -1226,8 +1226,8 @@ const newStyles = `
         }
 
         .view-toggle-btn:hover {
-            background: greenyellow;
-            color: black;
+            background: black;
+            color: white;
         }
 
         .tshirt-info {
