added new blog article

--- a/index.html
+++ b/index.html
@@ -1202,6 +1202,17 @@ const newStyles = `
     <div class="container">
         <h4 class="section-title">LATEST ARTICLES</h4>
         <div class="grid grid-3">
+
+            <div class="card">
+                <a href="willow-quantum-chip.html" class="card-link">
+                    <img src="images/quantum.jpeg" alt="Web Design" class="blog-img">
+                    <div class="card-content">
+                        <h3>Google's Willow Quantum Chip: Bridging Realities or Redefining Them?</h3>
+                        <p></p>
+                    </div>
+                </a>
+            </div>
+
             <div class="card">
                 <a href="parker-probe.html" class="card-link">
                     <img src="img/Solar_Orbiter_and_Parker_Solar_Probe_pillars.jpg" alt="parker probe orbiter" class="blog-img">
@@ -1222,15 +1233,7 @@ const newStyles = `
                 </a>
             </div>
 
-            <div class="card">
-                <a href="the-golden-record.html" class="card-link">
-                    <img src="images/golden record.jpg" alt="Web Design" class="blog-img">
-                    <div class="card-content">
-                        <h3>The Voyager Golden Record: Humanity's Bold Message to the Cosmos</h3>
-                        <p></p>
-                    </div>
-                </a>
-            </div>
+            
         </div>
     </div>
 </section>
