--- a/blog.html
+++ b/blog.html
@@ -961,6 +961,15 @@ const newStyles = `
             <h2 class="section-title">THE NET IS VAST AND INFINITE.</h2>
                 
             <div class="grid grid-3">
+
+                
+                <a href="willow-quantum-chip.html" class="card">
+                    <img src="images/quantum.jpeg" alt="Space Exploration" class="blog-img">
+                    <div class="card-content">
+                        <h3>Google's Willow Quantum Chip: Bridging Realities or Redefining Them?</h3>
+                    </div>
+                </a>
+
                 <!-- Article 1 -->
                 <a href="parker-probe.html" class="card">
                     <img src="img/Solar_Orbiter_and_Parker_Solar_Probe_pillars.jpg" alt="Space Exploration" class="blog-img">
