added author names and article publishing dates

--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -324,6 +324,26 @@
         margin: 2rem;
     }
 
+    .article-meta {
+    font-size: 0.9rem;
+    color: #aaa;
+    text-align: center;
+    margin-top: 1rem;      /* Space between header and meta info */
+    margin-bottom: 2rem;   /* Space between meta info and article content */
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+.article-author {
+    font-weight: 500;
+}
+
+.article-date {
+    font-style: italic;
+}
+
     .article-content {
     padding: 0 2rem; /* Add padding to the content area only */
 }
@@ -376,7 +396,14 @@
             </div>
             <div class="article-header">
                 <h1>AI and the Future of Global Stability</h1>
+                <div class="article-meta">
+                    <span class="article-author">By Siphosenkosi Mlotshwa</span>
+                    <span class="article-date">Published: January 10, 2025</span>
+                </div>
             </div>
+
+            
+
             <div class="article-content">
                 <!-- Article content goes here -->
                 <p>The idea of AI systems—like Samaritan from <em>Person of Interest</em>—being tasked with global stability is both alluring and terrifying. On one hand, machines offer a potential solution to the persistent chaos humanity has failed to control: wars, terrorism, corruption, inequality, and mismanagement. On the other hand, we’re discussing handing over the most significant aspects of our civilization to systems devoid of morality, empathy, and a true understanding of the human experience. Let’s dive into this mess, with no sugar coating.</p>
