--- a/myth-of-meaning.html
+++ b/myth-of-meaning.html
@@ -23,7 +23,7 @@
         })();
     </script>
 
-    <title>The Myth of Meaning: Albert Camus on Life, Rebellion, and Freedom - Siphosenkosi Mlotshwa</title>
+    <title>The Myth of Meaning: Albert Camus on Life, Rebellion, and Freedom</title>
     <!-- Add your existing styles -->
     <style>
         .article-container {
@@ -322,6 +322,26 @@
         margin: 2rem;
     }
 
+    .article-meta {
+    font-size: 0.9rem;
+    color: #aaa;
+    text-align: center;
+    margin-top: 1rem;      /* Space between header and meta info */
+    margin-bottom: 2rem;   /* Space between meta info and article content */
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+.article-author {
+    font-weight: 500;
+}
+
+.article-date {
+    font-style: italic;
+}
+
     .article-content {
     padding: 0 2rem; /* Add padding to the content area only */
 }
@@ -379,6 +399,10 @@
                 <!-- Article content goes here -->
                 <header>
                     <h1>Confronting the Absurd: A Journey Through the Philosophy of Albert Camus</h1>
+                    <div class="article-meta">
+                        <span class="article-author">By Siphosenkosi Mlotshwa</span>
+                        <span class="article-date">Published: January 13, 2025</span>
+                    </div>
                 </header>
         
                 <section>
