--- a/willow-quantum-chip.html
+++ b/willow-quantum-chip.html
@@ -322,6 +322,26 @@
         margin: 2rem;
     }
 
+    .article-meta {
+    font-size: 0.9rem;
+    color: #aaa;
+    text-align: center;
+    margin-top: 1rem;      /* Space between header and meta info */
+    margin-bottom: 2rem;   /* Space between meta info and article content */
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+.article-author {
+    font-weight: 500;
+}
+
+.article-date {
+    font-style: italic;
+}
+
     .article-content {
     padding: 0 2rem; /* Add padding to the content area only */
 }
@@ -378,6 +398,10 @@
             <div class="article-content">
                 <!-- Article content goes here -->
                 <h1>Google's Willow Quantum Chip: Bridging Realities or Redefining Them?</h1>
+                <div class="article-meta">
+                    <span class="article-author">By Siphosenkosi Mlotshwa</span>
+                    <span class="article-date">Published: February 16, 2025</span>
+                </div>
     
                 <h2></h2>
                 
