--- a/parker-probe.html
+++ b/parker-probe.html
@@ -323,6 +323,26 @@
         margin: 2rem;
     }
 
+    .article-meta {
+    font-size: 0.9rem;
+    color: #aaa;
+    text-align: center;
+    margin-top: 1rem;      /* Space between header and meta info */
+    margin-bottom: 2rem;   /* Space between meta info and article content */
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+.article-author {
+    font-weight: 500;
+}
+
+.article-date {
+    font-style: italic;
+}
+
     .article-content {
     padding: 0 2rem; /* Add padding to the content area only */
 }
@@ -378,6 +398,10 @@
                 <!-- Article content goes here -->
                 <header>
                     <h1>Decoding the Sun’s Secrets: How the Parker Solar Probe is Listening to Our Star</h1>
+                    <div class="article-meta">
+                        <span class="article-author">By Siphosenkosi Mlotshwa</span>
+                        <span class="article-date">Published: February 04, 2025</span>
+                    </div>
                 </header>
                 <main>
                     <section id="introduction">
