added author names and article publishing dates

--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -23,7 +23,7 @@
         })();
     </script>
 
-    <title>AI and Global Stability - Siphosenkosi Mlotshwa</title>
+    <title>AI and Global Stability</title>
     <!-- Add your existing styles -->
     <style>
         .article-container {
