--- a/index.html
+++ b/index.html
@@ -385,6 +385,23 @@
             object-fit: cover;
         }
 
+        .tech-stack {
+    display: flex;
+    gap: 0.5rem;
+    margin-top: 1rem;
+    flex-wrap: wrap;
+}
+
+.tech-badge {
+    background: black;
+    color: greenyellow;
+    border: 1px solid greenyellow;
+    padding: 0.25rem 0.5rem;
+    border-radius: 4px;
+    font-size: 0.8rem;
+    font-weight: 500;
+}
+
         .card-content {
             padding: 1.5rem;
             display: flex;
@@ -1140,6 +1157,11 @@ const newStyles = `
                         <div class="card-content">
                             <h3>Indie Book Shop</h3>
                             <p>An online platform celebrating creativity through a curated selection of independent publications, art books, and design materials.</p>
+                            <div class="tech-stack">
+                                <span class="tech-badge">HTML</span>
+                                <span class="tech-badge">CSS</span>
+                                <span class="tech-badge">JavaScript</span>
+                            </div>
                         </div>
                     </a>
                 </div>
@@ -1151,6 +1173,7 @@ const newStyles = `
                         <div class="card-content">
                             <h3>VR Travel & Events</h3>
                             <p>Discover a new way to explore the world with this cutting-edge virtual reality platform that brings global destinations and live events right to your fingertips.</p>
+                            
                         </div>
                     </a>
                 </div>
@@ -1164,6 +1187,11 @@ const newStyles = `
                         <div class="card-content">
                             <h3>NFT Marketplace & Community</h3>
                             <p>With curated collections, artist spotlights, and a beginner-friendly NFT guide, this platform is at the intersection between creativity and blockchain technology.</p>
+                            <div class="tech-stack">
+                                <span class="tech-badge">HTML</span>
+                                <span class="tech-badge">CSS</span>
+                                <span class="tech-badge">JavaScript</span>
+                            </div>
                         </div>
                     </a>
                 </div>
