--- a/parker-probe.html
+++ b/parker-probe.html
@@ -23,7 +23,7 @@
         })();
     </script>
 
-    <title>Decoding the Sun’s Secrets: How the Parker Solar Probe is Listening to Our Star- Siphosenkosi Mlotshwa</title>
+    <title>Decoding the Sun’s Secrets: How the Parker Solar Probe is Listening to Our Star</title>
     <!-- Add your existing styles -->
     <style>
         .article-container {
