--- a/the-golden-record.html
+++ b/the-golden-record.html
@@ -23,7 +23,7 @@
         })();
     </script>
 
-    <title>The Voyager Golden Record: Humanity’s Bold Message to the Cosmos - Siphosenkosi Mlotshwa</title>
+    <title>The Voyager Golden Record: Humanity’s Bold Message to the Cosmos</title>
     <!-- Add your existing styles -->
     <style>
         .article-container {
