--- a/the-real-reason-introverts-dont-fit-in.html
+++ b/the-real-reason-introverts-dont-fit-in.html
@@ -23,7 +23,7 @@
         })();
     </script>
 
-    <title>The Real Reason Inroverts Don’t Fit In - Siphosenkosi Mlotshwa</title>
+    <title>The Real Reason Inroverts Don’t Fit In</title>
     <!-- Add your existing styles -->
     <style>
         .article-container {
