--- a/creating-the-oasis.html
+++ b/creating-the-oasis.html
@@ -23,7 +23,7 @@
         })();
     </script>
 
-    <title>Creating The Oasis - Siphosenkosi Mlotshwa</title>
+    <title>Creating The Oasis: A Tech Breakdown</title>
     <!-- Add your existing styles -->
     <style>
         .article-container {
