--- a/shop.html
+++ b/shop.html
@@ -1361,6 +1361,23 @@ const newStyles = `
                         </a>
                     </div>
                 </div>
+
+                <!-- T-shirt Card Three -->
+                <div class="tshirt-card">
+                    <div class="tshirt-image-container">
+                        <img src="images/Front__goth.png" alt="T-shirt Front" class="tshirt-image front active">
+                        <img src="images/Back__goth.png" alt="T-shirt Back" class="tshirt-image back">
+                        <div class="view-controls">
+                            <button class="view-toggle-btn">View Back</button>
+                        </div>
+                    </div>
+                    <div class="tshirt-info">
+                        <a href="https://siphosenkosi-mlotshwa.printify.me/product/18067951/gothic-morale" target="_blank" class="price-button">
+                            $47
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
