--- a/about.html
+++ b/about.html
@@ -475,8 +475,8 @@
     display: block;
     margin: 0 auto 1.5rem; /* Centers the image */
     width: 198px; /* Sets a fixed size */
-    height: 180px;
-    border-radius: 250%; /* Makes the image circular */
+    height: 250px;
+    border-radius: 150%; /* Makes the image circular */
     object-fit: cover; /* Ensures the image fills the circle */
     border: 2px solid black; /* Optional: Add a border */
 }
@@ -966,7 +966,7 @@ const newStyles = `
         <div class="container">
             <h2 class="section-title"></h2>
             <div class="about-content">
-                <img src="images/20230605_102114.jpg" alt="Profile" class="profile-img">
+                <img src="images/FB_IMG_16262183613016065.jpg" alt="Profile" class="profile-img">
                 <div class="about-text">
                     <h3></h3>
                     <div class="about-contact-info">
