removed cert buttons

--- a/about.html
+++ b/about.html
@@ -980,10 +980,10 @@ const newStyles = `
                         Professionally, Siphosenkosi serves as a Full Stack Engineer at Petro Pixels, where he specializes in creating user-friendly web and app interfaces, designing intuitive websites, and optimizing processes to help clients achieve their goals. With a commitment to growth and adaptability, he thrives on tackling challenges, exploring new opportunities, and exceeding expectations.
                         
                         Beyond his technical expertise, Siphosenkosi actively shares insights through his personal blog, covering topics like space, exploration, AI, and philosophy.</p>
-                    <div class="btn-group">
+                    <!--<div class="btn-group">
                         <button class="btn btn-primary" onclick="openResumeModal()">VIEW RESUME</button>
                         <button class="btn btn-outline" onclick="openCertModal()">VIEW CERTIFICATIONS</button>
-                    </div>
+                    </div> -->
                 </div> 
             </div>
         </div>
