added new blog article

--- a/blog.html
+++ b/blog.html
@@ -989,6 +989,20 @@ const newStyles = `
             <div class="grid grid-3">
 
                 
+                <a href="majorana.html" class="card">
+                    <img src="images/majorana1_1260x708_v2-1024x575.jpg" alt="Space Exploration" class="blog-img">
+                    <div class="card-content">
+                        <h3>Microsoft’s Majorana 1 Chip: The Future of Quantum Computing?</h3>
+                        <div class="blog-meta">
+                            
+                            <span>
+                                <i class="fas fa-calendar-alt"></i>
+                                February 24, 2025
+                            </span>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="willow-quantum-chip.html" class="card">
                     <img src="images/quantum.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
